adding places api and countdown code

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@auth0/auth0-spa-js": "^1.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-foursquare": "^1.0.3",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1"
