--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@auth0/auth0-spa-js": "^1.0.1",
     "bootstrap": "^4.3.1",
     "flexbox-react": "^4.4.0",
+    "mdbreact": "^4.18.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
